data/test/regression/type_check/pass/issue_193.v
reg x[1:0][1:0];
always @(x) begin

end
initial $finish;
