data/test/regression/type_check/fail/issue_60c.v
wire x;
initial begin
  $display("Too many args %d", x, x, x);
  $finish;
end
